// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscribeForm renders default correctly 1`] = `
<div
  className="container  "
>
  <p
    className="description"
  >
    I write about 
    <a
      href="/tag/machine-learning/"
    >
      ML
    </a>
    ,
     
    <a
      href="/tag/web-development/"
    >
      Web Dev
    </a>
    , and
     
    <a
      href="/tags/"
    >
      more topics
    </a>
    . 
    <b>
      Subscribe to get new posts by email!
    </b>
  </p>
  <form
    acceptCharset="utf-8"
    action="https://sendy.victorzhou.com/subscribe"
    method="post"
    onFocus={[Function]}
    onSubmit={[Function]}
    target="_self"
  >
    <input
      name="Source"
      type="hidden"
      value="test"
    />
    <input
      name="list"
      type="hidden"
      value="CWC7638hEb6mfk1RqUbJ763snA"
    />
    <input
      name="subform"
      type="hidden"
      value="yes"
    />
    <input
      autoCapitalize="off"
      autoCorrect="off"
      name="hp"
      style={
        {
          "display": "none",
        }
      }
      tabIndex={-1}
      type="text"
    />
    <input
      aria-label="Email Address"
      autoCapitalize="off"
      autoCorrect="off"
      name="email"
      placeholder="example@domain.com"
      size={25}
      type="email"
    />
    <br />
    <input
      className=""
      type="submit"
      value="SUBMIT"
    />
  </form>
  <div
    className="g-recaptcha"
    data-callback="onSubscribeFormSubmit"
    data-sitekey="6Le4B78UAAAAAFAdZM2PCW_N0fewzkoQSkv9odSY"
    data-size="invisible"
  />
  <p
    className="recaptcha-message"
  >
    This site is protected by reCAPTCHA and the Google
     
    <a
      href="https://policies.google.com/privacy"
    >
      Privacy Policy
    </a>
     and
     
    <a
      href="https://policies.google.com/terms"
    >
      Terms of Service
    </a>
     apply.
  </p>
</div>
`;

exports[`SubscribeForm renders large correctly 1`] = `
<div
  className="container large "
>
  <p
    className="description"
  >
    I write about 
    <a
      href="/tag/machine-learning/"
    >
      ML
    </a>
    ,
     
    <a
      href="/tag/web-development/"
    >
      Web Dev
    </a>
    , and
     
    <a
      href="/tags/"
    >
      more topics
    </a>
    . 
    <b>
      Subscribe to get new posts by email!
    </b>
  </p>
  <form
    acceptCharset="utf-8"
    action="https://sendy.victorzhou.com/subscribe"
    method="post"
    onFocus={[Function]}
    onSubmit={[Function]}
    target="_self"
  >
    <input
      name="Source"
      type="hidden"
      value="test"
    />
    <input
      name="list"
      type="hidden"
      value="CWC7638hEb6mfk1RqUbJ763snA"
    />
    <input
      name="subform"
      type="hidden"
      value="yes"
    />
    <input
      autoCapitalize="off"
      autoCorrect="off"
      name="hp"
      style={
        {
          "display": "none",
        }
      }
      tabIndex={-1}
      type="text"
    />
    <input
      aria-label="Email Address"
      autoCapitalize="off"
      autoCorrect="off"
      name="email"
      placeholder="example@domain.com"
      size={25}
      type="email"
    />
    <br />
    <input
      className=""
      type="submit"
      value="SUBMIT"
    />
  </form>
  <div
    className="g-recaptcha"
    data-callback="onSubscribeFormSubmit"
    data-sitekey="6Le4B78UAAAAAFAdZM2PCW_N0fewzkoQSkv9odSY"
    data-size="invisible"
  />
  <p
    className="recaptcha-message"
  >
    This site is protected by reCAPTCHA and the Google
     
    <a
      href="https://policies.google.com/privacy"
    >
      Privacy Policy
    </a>
     and
     
    <a
      href="https://policies.google.com/terms"
    >
      Terms of Service
    </a>
     apply.
  </p>
</div>
`;
